# chat-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README  README.md  cloud-deploy.sh  cloud-pull-container.sh  cloud-push-container.sh  deploy-container-2.sh  deploy-container.sh  deploy-sample.sh  local-deploy.sh  local-push-container.sh  run-dev.sh
auth/: Cargo.toml
auth/docs/: openapi.yml
auth/src/: lib.rs
auth/src/adapter/driven/: mod.rs
auth/src/adapter/driven/cache/: in_memory_cache.rs
auth/src/adapter/driven/cache/redis/: auth_cache.rs  mod.rs  token_cache.rs  user_cache.rs
auth/src/adapter/driven/email_service/: aws_ses_email_service.rs  fake_email_service.rs
auth/src/adapter/driven/persistence/: in_memory_repository.rs
auth/src/adapter/driven/persistence/sqlx/: auth_repository.rs  user_repository.rs
auth/src/adapter/driving/web/: handlers.rs  schemas.rs
auth/src/application/port/driven/: auth_cache.rs  auth_repository.rs  mod.rs  token_cache.rs
auth/src/application/use_cases/: add_identy_confirm.rs  add_identy_request.rs  add_indenty_request.rs  authenticate_single_use_token.rs  create_auth_confirm.rs  create_auth_request.rs  create_single_use_token.rs  create_user_cache.rs  delete_auth.rs  find_by_identifier.rs  is_data_in_use.rs  login_auth.rs  login_user.rs  mod.rs  reset_password_confirm.rs  reset_password_request.rs  update_password.rs  verify_single_use_token.rs
auth/src/domain/: auth.rs  contact.rs  identification.rs  mod.rs
auth/src/domain/types/: code.rs  identification.rs  mod.rs  password.rs  single_use_token.rs  token_data.rs  token_metadata.rs
common/: Cargo.toml
common/docs/: openapi.yml
common/src/: cache.rs  config.rs  db.rs  lib.rs
common/src/adapter/: cache.rs  config.rs  helpers.rs  mod.rs  response_schemas.rs  state.rs  utils.rs  web_schemas.rs
common/src/adapter/protos/: build.rs  proto_message.proto
common/src/adapter/protos_schemas/: mod.rs  proto_message.rs
common/src/domain/: mod.rs
common/src/domain/models/: client.rs  event.rs  message.rs  mod.rs
common/src/domain/protos_schemas/: mod.rs  proto_package.rs
common/src/domain/types/: email.rs  group.rs  id.rs  mod.rs  phone_number.rs  recipient.rs  sender_type.rs  text.rs
common/src/models/: client.rs  message_model.rs  mod.rs
common/src/types/: id.rs  mod.rs  recipient.rs  sender_type.rs  text.rs
compose/: cloud-deploy.sh  (+2 more)
entry/: Cargo.toml
entry/migrations/: 20230714223631_auth.down.sql  20230714223631_auth.up.sql  20230714223633_profile.down.sql  20230714223633_profile.up.sql  20230714223633_user.down.sql  20230714223633_user.up.sql  20230714223634_contact.up.sql  20230714223635_identification.down.sql  20230714223635_identification.up.sql  20230714223635_todo.down.sql  20230714223635_todo.up.sql
entry/src/: example-openapi.json  lib.rs  logs.rs  main.rs  metrics.rs  schemas.rs
entry/src/adapter/: mod.rs  schemas.rs  utils.rs
entry/src/application/use_cases/: client_connect.rs  client_disconect.rs  consume_event.rs  mod.rs
entry/src/models/: message.rs
entry/src/ws/: client_connect.rs  consume_event.rs  handler.rs  mod.rs  utils.rs
launcher/: Cargo.toml
launcher/src/: lib.rs  main.rs
message/: Cargo.toml
message/src/: lib.rs
message/src/adapter/driven/: message_repository.rs  mod.rs
message/src/adapter/driven/persistence/sqlx/: mod.rs  todo_repository.rs
message/src/adapter/driving/web/: handlers.rs
message/src/adapter/driving/web/routes/: message.rs
message/src/adapter/driving/web/schemas/: mod.rs  todo.rs
message/src/application/port/driven/: errors.rs  media_repository.rs  message_queue.rs  message_repository.rs  mod.rs
message/src/application/use_cases/: consume_event.rs  consume_message.rs  mod.rs  produce_message.rs  read_message.rs  receive_message.rs  received_message.rs  send_message.rs
message/src/domain/: client.rs  message.rs  mod.rs
message/src/domain/types/: audio.rs  file.rs  image.rs  media_path.rs  mod.rs  recipient.rs  sender.rs  text.rs  user_contact_data.rs  video.rs
todo/: Cargo.toml
todo/src/: config.rs  lib.rs
todo/src/adapter/driven/persistence/: mod.rs
todo/src/adapter/driven/persistence/pgsql/: mod.rs  todo_repository.rs
todo/src/adapter/driven/persistence/sqlx/: todo_repository.rs
todo/src/adapter/driving/web/routes/: todo.rs
todo/src/adapter/driving/web/schemas/: todo.rs
todo/src/application/port/driven/: errors.rs  todo_repository.rs
todo/src/application/use_cases/: create_todo.rs  delete_todo.rs  delete_todos_by_tag.rs  delete_todos_done.rs  find_todo.rs  find_todos.rs  mod.rs  todo_add_tag.rs  todo_remove_tag.rs  update_todo.rs
todo/src/domain/: todo.rs
user/: Cargo.toml
user/src/: lib.rs
user/src/adapter/driven/: mod.rs
user/src/adapter/driven/cache/: in_memory_cache.rs  mod.rs
user/src/adapter/driven/cache/redis/: mod.rs  models.rs  user_cache.rs
user/src/adapter/driven/email_service/: fake_email_service.rs  mod.rs
user/src/adapter/driven/persistence/: in_memory_repository.rs  mod.rs
user/src/adapter/driven/persistence/diesel/: user_repository.rs
user/src/adapter/driven/persistence/pgsql/: mod.rs  user_repository.rs
user/src/adapter/driven/persistence/sqlx/: user_repository.rs
user/src/adapter/driving/web/: handlers.rs  schemas.rs
user/src/adapter/driving/web/routes/: user.rs
user/src/application/port/driven/: email_servic.rs  email_service.rs  errors.rs  in_memory_repository.rs  mod.rs  sms_service.rs  user_cache.rs  user_cache_repository.rs  user_repository.rs
user/src/application/use_cases/: create_user.rs  create_user_cache.rs  create_user_validate.rs  delete_user.rs  get_user_info.rs  is_data_in_use.rs  is_user_exist.rs  login_user.rs  mod.rs  reset_password.rs  reset_password_request.rs  update_contact_info_cache.rs  update_contact_info_validate.rs  update_contact_user_info.rs  update_password.rs  update_user_info.rs  utils.rs
user/src/domain/: user.rs
user/src/domain/types/: birthday.rs  code.rs  email.rs  error.rs  first_name.rs  id.rs  language.rs  last_name.rs  mod.rs  nationality.rs  password.rs  phone_number.rs
(+124 files in other folders)
