[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.7.1"
serde = { version = "1.0.152"}
jsonwebtoken = "8.3.0"
uuid = { version = "1.4.1", features = ["serde"]}
