[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# locals
common = { path = "../common"}
#
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.8.8"
serde = { version = "1.0.152"}
jsonwebtoken = "9.1.0"
uuid = { version = "1.4.1", features = ["serde"]}
regex = "1.9.1"
argon2 = "0.5.0"
async-trait = "0.1.71"
