[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# locals
common = { path = "../common"}
# aws
aws-config = { version = "1.0.1", features = ["behavior-version-latest"]}
aws-sdk-sesv2 = { version = "1.3.0" }
#
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.8.8"
serde = { version = "1.0.152"}
jsonwebtoken = "9.1.0"
uuid = { version = "1.4.1", features = ["serde"]}
regex = "1.9.1"
argon2 = "0.5.0"
async-trait = "0.1.71"
serde_with = "3.0.0"
axum = { version = "0.7.1"}
deadpool = "0.10.0"
deadpool-redis = "0.14.0"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features=["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid" ] }
futures = "0.3.28"
rand = "0.8.4"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
