[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features=["json"]}
toml = "0.8.2"
serde = "1.0.152"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "postgres" ] }
async-std = "1.10"
deadpool = "0.10.0"
deadpool-redis = "0.13.0"
redis-async = "0.16.1"
lazy_static = "1.4.0"
prometheus = "0.13.3"
