[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# added
user = { path = "../user"}
todo = { path = "../todo"}
common = { path = "../common"}
#
rocket = { version = "0.5.0-rc.3", features=["json"]}
toml = "0.7.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid" ] }
deadpool = "0.9.5"
deadpool-redis = "0.12.0"
prometheus = "0.13.3"
systemstat = "0.2.3"
lazy_static = "1.4.0"