[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# added
profile = { path = "../profile"}
message = { path = "../message"}
auth = { path = "../auth"}
common = { path = "../common"}
#
toml = "0.8.2"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid" ] }
prometheus = "0.13.3"
systemstat = "0.2.3"
lazy_static = "1.4.0"
axum = { version = "0.7.1" }
axum-extra = { version = "0.9.0", features = ["protobuf", "typed-header"] }
tokio = { version = "1.32.0", features=["full"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.5.0", features=["fs", "trace", "cors"] }
tracing-subscriber = { version = "0.3.17", features=["env-filter"] }
tracing = "0.1.37"
tower = { version = "0.4.13", features = ["util"] }
futures = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = "1.0.188"
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["v4"] }
protobuf = "3.3.0"