[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
toml = "0.7.1"
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.0.0"

# added
user = { path = "../user"}
todo = { path = "../todo"}
common = { path = "../common"}