[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# locals
common = { path = "../common"}
auth = { path = "../auth"}
#
# rocket = { version = "0.5.0-rc.3", features=["json"]}
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid" ] }
toml = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.105"
serde_with = "3.0.0"
async-trait = "0.1.71"
uuid = "1.4.1"
axum = { version = "0.6.20", features = ["headers", "ws"]}
tokio = { version = "1.32.0", features=["full"] }
tokio-tungstenite = "0.20.1"
futures = "0.3.28"
futures-util = "0.3.28"