[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.7.1"
serde = "1.0.152"
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
serde_with = "3.0.0"
async-trait = "0.1.71"

# others
common = { path = "../common"}
auth = { path = "../auth"}