[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# locals
auth = { path = "../auth"}
common = { path = "../common"}
#
rocket = { version = "0.5.0-rc.2", features=["json"]}
toml = "0.7.1"
serde = "1.0.152"
argon2 = "0.5.0"
# diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
# diesel_migrations = "2.1.0"
async-trait = "0.1.71"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }